OCE-379 Fixed top search z-index

--- a/ui/oce/corruption-risk/contracts/style.less
+++ b/ui/oce/corruption-risk/contracts/style.less
@@ -46,6 +46,7 @@
 
 .contract-page, .contracts-page {
   .top-search {
+    z-index: 0;
     margin: 20px;
     input.form-control {
       border-radius: 4px;
